# Version_5

./: .gitignore  README.md  README_GUI_APPEND.md  README_TUTORIAL.md  pyproject.toml
actions/: catalog.json
events/: catalog.json
items/: starter_pack.json
scenarios/: default.json
skills/: example_focus.json  web_research_3_2_1.json
src/echo_lifesim/: __init__.py  catalogs.py  cli.py  engine.py  gui.py  llm_client.py  memory.py  models.py  persistence.py  skills.py  world_assets.py
src/echo_lifesim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_engine_basic.py  test_epoch_artifacts.py  test_habits_buffs.py  test_overmind_ticker.py
